Add under lina to title h2 in restaurant's page

--- a/restaurantPages/lanoteenchante.html
+++ b/restaurantPages/lanoteenchante.html
@@ -29,7 +29,7 @@
             <section class="menus">
                 <div class="menu-type">
                     <h2>ENTRÉES</h2>
-
+                    <div class="rectangle"></div>
                     <div class="card-menu">
                         <div class="card-content">
                             <b>Ravioles de foie gras</b>
@@ -90,6 +90,7 @@
                 </div>
                 <div class="menu-type">
                     <h2>PLATS</h2>
+                    <div class="rectangle"></div>
                     <div class="card-menu">
                         <div class="card-content">
                             <b>Noix de coquilles Saint-Jacques</b>
@@ -135,6 +136,7 @@
                 </div>
                 <div class="menu-type">
                     <h2>DESSERTS</h2>
+                    <div class="rectangle"></div>
                     <div class="card-menu">
                         <div class="card-content">
                             <b>Macaron noisette et chocolat</b>
