--- a/restaurantPages/lapalettedugout.html
+++ b/restaurantPages/lapalettedugout.html
@@ -32,7 +32,7 @@
             <section class="menus">
                 <div class="menu-type">
                     <h2>ENTRÉES</h2>
-
+                    <div class="rectangle"></div>
                     <div class="card-menu">
                         <div class="card-content">
                             <b>Fricassée d'escargot</b>
@@ -79,6 +79,7 @@
                 </div>
                 <div class="menu-type">
                     <h2>PLATS</h2>
+                    <div class="rectangle"></div>
                     <div class="card-menu">
                         <div class="card-content">
                             <b>Filet de boeuf aux herbes</b>
@@ -124,6 +125,7 @@
                 </div>
                 <div class="menu-type">
                     <h2>DESSERTS</h2>
+                    <div class="rectangle"></div>
                     <div class="card-menu">
                         <div class="card-content">
                             <b>Paris-Brest</b>
