--- a/restaurantPages/ledelicedessens.html
+++ b/restaurantPages/ledelicedessens.html
@@ -29,7 +29,7 @@
             <section class="menus">
                 <div class="menu-type">
                     <h2>ENTRÉES</h2>
-
+                    <div class="rectangle"></div>
                     <div class="card-menu">
                         <div class="card-content">
                             <b>Tartare de thon</b>
@@ -76,6 +76,7 @@
                 </div>
                 <div class="menu-type">
                     <h2>PLATS</h2>
+                    <div class="rectangle"></div>
                     <div class="card-menu">
                         <div class="card-content">
                             <b>Poulet rôti aux herbes de Provence </b>
@@ -121,6 +122,7 @@
                 </div>
                 <div class="menu-type">
                     <h2>DESSERTS</h2>
+                    <div class="rectangle"></div>
                     <div class="card-menu">
                         <div class="card-content">
                             <b>Farandole de desserts</b>
