--- a/restaurantPages/aLaFrancaise.html
+++ b/restaurantPages/aLaFrancaise.html
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
 
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -116,7 +116,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -162,7 +162,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
 
