--- a/restaurantPages/lanoteenchante.html
+++ b/restaurantPages/lanoteenchante.html
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
 
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -116,7 +116,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -162,7 +162,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -176,7 +176,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </div>
