--- a/restaurantPages/lapalettedugout.html
+++ b/restaurantPages/lapalettedugout.html
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
 
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -73,7 +73,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -105,7 +105,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -151,7 +151,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="card-menu">
@@ -165,7 +165,7 @@
                             </div>
                         </div>
                         <div class="panel">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </div>
