Correction: display of the main button + title

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="reservation">
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des resaurant d'exception, sélectionné pas nos soins</p>
-            <button class="explore-resto">Explorer nos resaurant</button>
+            <button class="btn-principal">Explorer nos resaurant</button>
         </section>
         <section class="fonctionnement">
             <h2>Fonctionnement</h2>
