--- a/restaurantPages/lapalettedugout.html
+++ b/restaurantPages/lapalettedugout.html
@@ -171,7 +171,7 @@
                 </div>
             </section>
         </div>
-        <button class="command">Commander</button>
+        <button class="btn-principal">Commander</button>
     </main>
     <footer>
         <h2>Ohmyfood</h2>
