--- a/restaurantPages/ledelicedessens.html
+++ b/restaurantPages/ledelicedessens.html
@@ -168,7 +168,7 @@
                 </div>
             </section>
         </div>
-        <button class="command">Commander</button>
+        <button class="btn-principal">Commander</button>
     </main>
     <footer>
         <h2>Ohmyfood</h2>
