--- a/restaurantPages/aLaFrancaise.html
+++ b/restaurantPages/aLaFrancaise.html
@@ -169,7 +169,7 @@
                 </div>
             </section>
         </div>
-        <button class="command">Commander</button>
+        <button class="btn-principal">Commander</button>
     </main>
     <footer>
         <h2>Ohmyfood</h2>
