--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
+<!--- diopdavid94@gmail.com -->
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -19,10 +20,10 @@
         <h1>Ohmyfood</h1>
     </header>
     <main>
-        <section class="location">
+        <div class="location">
             <i class="fa-solid fa-location-dot"></i>
             <p>Paris, Belleville</p>
-        </section>
+        </div>
         <section class="reservation">
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des resaurant d'exception, sélectionné pas nos soins</p>
@@ -36,13 +37,13 @@
                     <i class="fa-solid fa-mobile-screen-button"></i>
                     <p>Choisissez un restaurant</p>
                 </div>
-                <br />
+                <br>
                 <div class="fonctionnement-box">
                     <span>2</span>
                     <i class="fa-solid fa-list-ul"></i>
                     <p>Composez votre menu</p>
                 </div>
-                <br />
+                <br>
                 <div class="fonctionnement-box">
                     <span>3</span>
                     <i class="fa-solid fa-store"></i>
@@ -64,7 +65,6 @@
                                     <i class="fa-solid fa-square-full rideau" aria-hidden="true"></i>
                                     <i class="fa-solid fa-heart" aria-hidden="true"></i>
                                 </div>
-
                                 <!--<i class="fas fa-heart"></i>-->
                             </div>
                             <p>Ménilmontnant</p>
@@ -93,7 +93,6 @@
                     <a href="./restaurantPages/aLaFrancaise.html">
                         <img src="./assets/restaurants/img-rest-3.jpg" alt="image restaurant 1">
                         <div class="restaurant-text">
-
                             <div class="resto-align-item">
                                 <h2>A la française</h2>
                                 <div class="favoris">
